--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ tera = "0.11"
 rand = "0.7"
 formdata = "0.12"
 url = "2.1"
+simple-error = "0.2"
 
 [dependencies.uuid]
 features = ["serde", "v4"]
