--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ rand = "0.7"
 formdata = "0.12"
 url = "2.1"
 simple-error = "0.2"
+http = "0.1"
 
 [dependencies.uuid]
 features = ["serde", "v4"]
